# ALSE_2210

./: README.md
airQ/src/: CMakeLists.txt  carbon.h  main.cpp  nitro.h  sensor.h  temp.h
complejos/: CMakeLists.txt  complejo.cpp  complejo.h  main.cpp
data_logger/: CMakeLists.txt  DB_local.cpp  DB_local.h  DB_remota.cpp  DB_remota.h  Muestra.cpp  Muestra.h  Posicion.cpp  Posicion.h  Seguidor_app.cpp  Seguidor_app.h  data_logger.mdj  main.cpp  main_gui.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
ex8_DB/: prueba.db
ex9_MySql/: CMakeLists.txt  mysqldb_test.cpp
filtro/: datos_entrada.txt
filtro/filtro_lista/: Dato.h  Filtro.cpp  Filtro.h
filtro/filtro_lista_stl/: Filtro.cpp  Filtro.h  main.cpp
filtro/filtro_queue_stl/: CMakeLists.txt  Filtro.cpp  Filtro.h
filtro/filtro_stl/: CMakeLists.txt  Filtro.cpp  Filtro.h
herencia/: main.cpp
herencia/fig_geometricas/: CMakeLists.txt  Circulo.cpp  Circulo.h  Cuadrado.cpp  Cuadrado.h  Pentagono.cpp  Pentagono.h  Triangulo.cpp  Triangulo.h  main.cpp
herencia/fig_geometricas_file/: Circulo.cpp  Cuadrado.cpp  Geometrica.cpp  Geometrica.h  main.cpp
parcial_1/: Circulo.cpp  Circulo.h  Cuadrado.h  Geometrica.cpp  Geometrica.h  Pentagono.cpp  Pentagono.h  Triangulo.cpp  Triangulo.h  main.cpp
polinomios/: Polinomio.cpp
qt_ejemplo/qt_matriz/: CMakeLists.txt  dia_escalar.cpp  dia_escalar.h  dia_escalar.ui  main.cpp  ventppal.cpp  ventppal.h  ventppal.ui
